--- a/project.yaml
+++ b/project.yaml
@@ -1650,7 +1650,8 @@ actions:
       moderately_sensitive:
         releaselist: output/files-for-release.txt
         command: output/osrelease-command.txt
-        csv: output/release-objects/*.csv
+        output1: output/release-objects/*.csv
+        output2: output/release-objects/*/*.csv
 
   ## # # # # # # # # # # # # # # # # # # # 
   ## End 
