Provide devcontainer configuration
This will provide a development environment for researchers containing:

* Python 3.10
* The equivalent Python packages based on the Python Action image, including ehrql
* R 4.0.5
* RStudio
* The equivalent R packages based on the R Action image

This can be used in Codespaces or locally via devcontainers in VS Code.

It's based on the work being done for https://github.com/opensafely-core/codespaces-initiative/issues/43.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
-    "python.linting.pylintEnabled": false,
-    "python.linting.flake8Enabled": true,
-    "python.linting.enabled": true,
+    "python.analysis.extraPaths": [".devcontainer/ehrql-main/"],
+    "python.defaultInterpreterPath": "/opt/venv/bin/python3.10",
+    "python.terminal.activateEnvironment": true,
     "data.preview.create.json.schema": false,
     "files.associations": {
         "*.feather": "arrow",
